basic javafx app with test